FF-1909: Fixed context menu from being cut off

--- a/Client/Components/Common/FlowContextMenu/FlowContextMenu.razor.scss
+++ b/Client/Components/Common/FlowContextMenu/FlowContextMenu.razor.scss
@@ -28,6 +28,10 @@
   top: var(--top);
   left: var(--left);
   transform-origin: left;
+  
+  &.hidden  {
+    display: none;
+  }
 
   li.separator {
     border-top: 1px solid var(--border-color);
